--- a/people-service-web-app-deployment.yaml
+++ b/people-service-web-app-deployment.yaml
@@ -34,8 +34,9 @@ metadata:
   labels:
     app: people-web-app
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
-    - port: 5000
+    - port: 80
+      targetPort:5000
   selector:
     app: people-web-app
